--- a/channel.html
+++ b/channel.html
@@ -13,7 +13,8 @@ title: Главная
 <h3>Список всех постов:</h3>
 
 <ul>
-    {% for post in site.posts %}
+    {% assign sorted_posts = site.posts | sort: 'date' %}
+    {% for post in sorted_posts %}
         <li>
             <a href="{{ site.url }}{{ post.url | remove: 'index.html' }}">{{ post.title }}</a>
             ({{ post.date | date: "%Y.%m.%d" }})
