--- a/channel.html
+++ b/channel.html
@@ -13,12 +13,42 @@ title: Главная
 <h3>Список всех постов:</h3>
 
 <ul>
-    {% assign sorted_posts = site.posts | sort: 'date' %}
-    {% for post in sorted_posts %}
-        <li>
-            <a href="{{ site.url }}{{ post.url | remove: 'index.html' }}">{{ post.title }}</a>
-            ({{ post.date | date: "%Y.%m.%d" }})
-        </li>
-    {% endfor %}
+    {%- assign sorted_posts = site.posts | sort: 'date' -%}
+    {%- for post in sorted_posts -%}
+        <li>{{ post.date | date: "%Y.%m.%d" }} - <a href="{{ site.url }}{{ post.url | remove: 'index.html' }}">{{ post.title }}</a></li>
+    {%- endfor -%}
 </ul>
 
+<!--
+{% for post in site.posts  %}
+    {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
+    {% capture this_month %}{{ post.date | date: "%B" }}{% endcapture %}
+    {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
+    {% capture next_month %}{{ post.previous.date | date: "%B" }}{% endcapture %}
+
+    {% if forloop.first %}
+        <h4 id="{{ this_year }}-ref">{{this_year}}</h4>
+        <h5 id="{{ this_year }}-{{ this_month }}-ref">{{ this_month }}</h5>
+        <ul>
+    {% endif %}
+
+    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+
+    {% if forloop.last %}
+        </ul>
+    {% else %}
+        {% if this_year != next_year %}
+        </ul>
+        <h4 id="{{ next_year }}-ref">{{next_year}}</h4>
+        <h5 id="{{ next_year }}-{{ next_month }}-ref">{{ next_month }}</h5>
+        <ul>
+        {% else %}
+            {% if this_month != next_month %}
+                </ul>
+                <h5 id="{{ this_year }}-{{ next_month }}-ref">{{ next_month }}</h5>
+                <ul>
+            {% endif %}
+        {% endif %}
+    {% endif %}
+{% endfor %}
+-->
