--- a/_channel/index.html
+++ b/_channel/index.html
@@ -1,6 +1,6 @@
 ---
-layout: post
 title: Главная
+layout: post
 ---
 
 <h1>Добро пожаловать!</h1>
@@ -10,12 +10,15 @@ title: Главная
     Посты на канале выходят чуть больше чем раз в день, при этом каждый день посвящён одному исполнителю.
 </p>
 
-<h3>Список всех постов:</h3>
+<h2>Список всех постов:</h2>
 
 <ul>
-    {%- assign sorted_posts = site.posts | sort: 'date' -%}
+    {%- assign sorted_posts = site.channel | sort: 'date' -%}
     {%- for post in sorted_posts -%}
-        <li>{{ post.date | date: "%Y.%m.%d" }} - <a href="{{ site.url }}{{ post.url | remove: 'index.html' }}">{{ post.title }}</a></li>
+        {%- comment -%}done in order not to include this page itself{%- endcomment -%}
+        {%- if post.date != site.time -%}
+            <li>{{ post.date | date: "%Y.%m.%d" }} - <a href="{{ post.url | remove: 'index.html' }}">{{ post.title }}</a></li>
+        {%- endif -%}
     {%- endfor -%}
 </ul>
 
