--- a/2048.html
+++ b/2048.html
@@ -1,6 +1,12 @@
 ---
 layout: games
 ---
-<div id="2048">
-
+<div id="main_2048">
+  {%- assign pow = 2 -%}
+  {%- for val in (1..16) -%}
+    <div class="tile">
+      <div class="value v{{pow}}"></div>
+    </div>
+    {%- assign pow = pow | times: 2 -%}
+  {%- endfor -%}
 </div>
